[package]
name = "tg-captain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros", "time"] }
httping = "0.1.8"
transmission-rpc = "0.4.2"
mime = "0.3.17"
sysinfo = "0.30.7"
substring = "1.4.5"
bollard = "0.16.1"
serde_yml = "0.0.4"
serde = "1.0.197"
